# anterior

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt
anterior/: __init__.py  utils.py
anterior/source/: __init__.py  frame.py  series.py
anterior/warp/: __init__.py  backtester.py  schedule.py
docs/: index.md
docs/documentation/source/: oracle_data_frame.md  oracle_series.md
docs/documentation/warp/: backtester.md  schedule.md
docs/getting_started/: community.md  concepts.md  faq.md  index.md
docs/overrides/: main.html
docs/stylesheets/: custom.css
docs/tutorials/: marketing.md  sales.md  trading.md
tutorial_scripts/: marketing.py  sales.py
