[tool.poetry]
name = "anterior"
version = "0.0.1"
description = "Python's pluggable backtester"
authors = ["Cubyc, Inc."]
license = "License :: GNU Lesser General Public License v3 (LGPLv3)"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
annotated-types = "^0.6.0"
APScheduler = "^3.10.4"
numpy = "^1.26.4"
pandas = "^2.2.1"
polars = "^0.20.17"
python-dateutil = "^2.9.0.post0"
pytz = "^2024.1"
requests = "^2.31.0"
rich = "^13.7.1"
six = "^1.16.0"
time-machine = "^2.14.1"
typing-extensions = "^4.10.0"
tzdata = "^2024.1"
tzlocal = "^5.2"
urllib3 = "^2.2.1"
pydantic = "^2.6.4"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
markdown-it-py = "^3.0.0"
mkdocs = "^1.5.3"
mdurl = "^0.1.2"
pygments = "^2.17.2"
mkdocs-material = {extras = ["imaging"], version = "^9.5.15"}
mkdocs-autorefs = "^1.0.1"
mkdocs-site-urls = "^0.2.0"
mkdocstrings = "^0.24.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
